[package]
name = "ssd1331-async"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.8.0"

[dev-dependencies]
defmt = "0.3.8"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", path = "../embassy/embassy-executor", features = [
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "task-arena-size-1024",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [
    "defmt",
    "stm32f103cb",
    "time",
    "time-driver-tim4",
    "exti",
    "memory-x",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync" }
embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1.0"

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = "s"
codegen-units = 1
